[gd_scene load_steps=20 format=3 uid="uid://dui1hqinflue4"]

[ext_resource type="Script" uid="uid://c5juqf70v43tr" path="res://GameStarter/login_page.gd" id="1_6t1k7"]
[ext_resource type="Texture2D" uid="uid://cavhbnn0b3qoj" path="res://assets/ui/background.png" id="1_wx55c"]
[ext_resource type="Texture2D" uid="uid://cw203koi7bphl" path="res://assets/ui/logo.png" id="3_qpq5i"]
[ext_resource type="Texture2D" uid="uid://cp6gvl7q3kwp0" path="res://assets/ui/Text field.png" id="4_cl3p3"]
[ext_resource type="FontFile" uid="uid://dui23xil84umq" path="res://assets/fonts/porter-sans-inline-block-webfont.ttf" id="5_ymmrh"]
[ext_resource type="Texture2D" uid="uid://b0qup0knwas1j" path="res://assets/ui/Eye off.png" id="7_wdso3"]
[ext_resource type="Texture2D" uid="uid://buk34li2ffbo0" path="res://assets/ui/BackIcon.png" id="8_i56jj"]
[ext_resource type="Texture2D" uid="uid://by4gb7jifow7n" path="res://assets/ui/Eye.png" id="8_uobxe"]
[ext_resource type="Script" uid="uid://dxxgr84dsusln" path="res://GameStarter/animated_hide.gd" id="9_uobxe"]
[ext_resource type="PackedScene" uid="uid://dcblllx72cd53" path="res://GameStarter/accverificationpop.tscn" id="11_c1d45"]
[ext_resource type="PackedScene" uid="uid://c5ptrro73l43e" path="res://GameStarter/Forgot_Password_Popup.tscn" id="12_6qrxc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tb2qk"]
size = Vector2(66, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1d45"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_wdso3")
}, {
"duration": 1.0,
"texture": ExtResource("8_uobxe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qixxl"]
bg_color = Color(0.882353, 0.666667, 0, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0saa"]
bg_color = Color(0.882353, 0.666667, 0, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aayhj"]
bg_color = Color(0.882353, 0.666667, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yg8a2"]
bg_color = Color(1, 0.756863, 0.027451, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iy3od"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfoay"]
bg_color = Color(0.918992, 0.149279, 0.128766, 1)

[node name="LoginPage" type="Node2D"]
script = ExtResource("1_6t1k7")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_wx55c")

[node name="BackButton login" type="TextureButton" parent="Background"]
offset_left = -928.0
offset_top = -508.0
offset_right = -854.0
offset_bottom = -434.0
texture_normal = ExtResource("8_i56jj")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(960, 249.8)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_qpq5i")

[node name="LOG IN" type="Label" parent="."]
offset_left = 808.0
offset_top = 393.8
offset_right = 1117.0
offset_bottom = 486.8
theme_override_fonts/font = ExtResource("5_ymmrh")
theme_override_font_sizes/font_size = 64
text = "LOGIN"

[node name="Email" type="TextureRect" parent="."]
offset_left = 560.0
offset_top = 561.8
offset_right = 1225.0
offset_bottom = 617.8
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_cl3p3")

[node name="LabelEmail" type="LineEdit" parent="Email"]
layout_mode = 0
offset_left = -1.90735e-05
offset_top = 1.01725e-05
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true

[node name="Label" type="Label" parent="Email/LabelEmail"]
layout_mode = 0
offset_top = -37.0
offset_right = 264.0
offset_bottom = -9.0
theme_override_font_sizes/font_size = 20
text = "Email address or username"

[node name="Password" type="TextureRect" parent="."]
offset_left = 560.0
offset_top = 681.8
offset_right = 1225.0
offset_bottom = 737.8
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_cl3p3")

[node name="LabelPassword" type="LineEdit" parent="Password"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true
secret = true

[node name="Label" type="Label" parent="Password/LabelPassword"]
layout_mode = 0
offset_top = -36.0
offset_right = 241.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
text = "Password"

[node name="HideButton" type="Label" parent="Password/LabelPassword"]
layout_mode = 0
offset_left = 625.0
offset_top = -36.0
offset_right = 665.0
offset_bottom = -13.0
text = "Hide"

[node name="Area2D" type="Area2D" parent="Password/LabelPassword/HideButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Password/LabelPassword/HideButton/Area2D"]
position = Vector2(5, 13)
scale = Vector2(1.2, 1.2)
shape = SubResource("RectangleShape2D_tb2qk")

[node name="AnimatedSprite2D_hide" type="AnimatedSprite2D" parent="Password/LabelPassword/HideButton/Area2D"]
position = Vector2(-15, 12)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_c1d45")
script = ExtResource("9_uobxe")

[node name="LoginButton" type="Button" parent="."]
offset_left = 720.0
offset_top = 841.8
offset_right = 1122.0
offset_bottom = 898.8
scale = Vector2(1.2, 1.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_qixxl")
theme_override_styles/hover = SubResource("StyleBoxFlat_c0saa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aayhj")
theme_override_styles/normal = SubResource("StyleBoxFlat_yg8a2")
text = "Login"

[node name="RememberMe" type="CheckBox" parent="."]
offset_left = 560.0
offset_top = 777.8
offset_right = 586.0
offset_bottom = 803.8

[node name="Remember me lab" type="Label" parent="RememberMe"]
layout_mode = 0
offset_left = 32.0
offset_top = -4.0
offset_right = 175.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 20
text = "Remember me"

[node name="Reset Pass Btn" type="Button" parent="."]
offset_left = 1192.0
offset_top = 777.8
offset_right = 1358.0
offset_bottom = 805.8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_iy3od")
text = "Reset Password ?"

[node name="ForgotPasswordPopup" parent="." instance=ExtResource("12_6qrxc")]
visible = false
position = Vector2(409, 138)

[node name="Accverificationpop" parent="." instance=ExtResource("11_c1d45")]
visible = false
position = Vector2(411, 289)

[node name="PasswordErrorPopup" type="PopupPanel" parent="."]
theme_override_styles/panel = SubResource("StyleBoxFlat_lfoay")

[node name="Label" type="Label" parent="PasswordErrorPopup"]
offset_right = 100.0
offset_bottom = 100.0

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="Background/BackButton login" to="." method="_on_back_button_login_pressed"]
[connection signal="input_event" from="Password/LabelPassword/HideButton/Area2D" to="Password/LabelPassword/HideButton/Area2D/AnimatedSprite2D_hide" method="_on_area_2d_input_event"]
[connection signal="pressed" from="LoginButton" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Reset Pass Btn" to="." method="_on_reset_pass_btn_pressed"]
